--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.291.0",
     "next": "13.5.6",
     "react": "^18",
+    "react-compare-slider": "^3.0.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
